--- a/README.rdoc
+++ b/README.rdoc
@@ -149,7 +149,7 @@ Pow. Isolated!
 
 == License
 
-Copyright 2009 John Barnette, et al (jbarnette@rubyforge.org)
+Copyright 2009 John Barnette, et al. (jbarnette@rubyforge.org)
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
