--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,8 @@
+=== 1.2.1 / 2009-09-22
+
+* I am a moron. Made the Hoe plugin work again.
+* Be consistent about accessors vs ivars. [Review by Scott W]
+
 === 1.2.0 / 2009-09-22
 
 * Added a Hoe plugin.
