--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 1.3.0 / 2009-09-23
+
+* Add support for Gem build args. See the README for details.
+
 === 1.2.1 / 2009-09-22
 
 * I am a moron. Made the Hoe plugin work again.
