--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,8 @@
+=== 1.4.0 / 2009-09-30
+
+* Added automatic cleanup.
+* Minor code refactoring.
+
 === 1.3.0 / 2009-09-23
 
 * Add support for Gem build args. See the README for details.
