--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 1.5.1 / 2009-10-02
+
+* Fix passthrough for explicitly false conditions.
+
 === 1.5.0 / 2009-10-01
 
 * Implemented passthrough.
