--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 1.9.0 / 2010-01-18
+
+* Allow isolation to be disabled.
+
 === 1.8.2 / 2010-01-13
 
 * Don't include Isolate as a dependency in .gems.
