--- a/README.rdoc
+++ b/README.rdoc
@@ -38,7 +38,7 @@ same name. Version specifiers are optional.
     require "rubygems"
     require "isolate"
 
-    Isolate.gems "vendor/isolated" do
+    Isolate.gems "tmp/gems" do
       gem "johnson", "~> 1.1" # or maybe...
       gem "jbarnette-johnson"
     end
@@ -61,7 +61,7 @@ Sometimes different sets of gems are appropriate at different
 times. Isolate allows you to restrict gems by 'environment' (which is
 really just a string passed in when things are activated).
 
-    Isolate.gems "vendor/isolated" do
+    Isolate.gems "tmp/gems" do
       gem "intercession"
 
       environment :test, :cucumber do
@@ -86,6 +86,15 @@ exceptions, <tt>:source</tt> and <tt>:args</tt>.
     # pass gem install args (the part after the '--')
     gem "agem", :args => "--no-blah"
 
+=== An External File
+
+If you'd like to have a separate file that *just* has your +gem+ and
++environment+ calls in it, You can pass an optional <tt>:file</tt>
+option instead of (or in addition to) providing a block.
+
+    # keepin' things clean
+    Isolate.gems "tmp/gems", :file => "config/isolate.rb"
+
 === Installing Isolated Gems
 
 By default, Isolate will install and clean up your gems
@@ -93,17 +102,17 @@ automatically. You can pass the <tt>:cleanup</tt>, <tt>:install</tt>,
 and <tt>:verbose</tt> options to control things:
 
     # don't remove unnecesary gems
-    Isolate.gems "vendor/isolated", :cleanup => false do
+    Isolate.gems "tmp/gems", :cleanup => false do
       ...
     end
 
     # install, but quietly
-    Isolate.gems "vendor/isolated", :verbose => false do
+    Isolate.gems "tmp/gems", :verbose => false do
       ...
     end
 
     # don't install
-    Isolate.gems "vendor/isolated", :install => false do
+    Isolate.gems "tmp/gems", :install => false do
       ...
     end
 
@@ -142,49 +151,55 @@ doesn't want to depend on any system gems (except isolate, of course).
 
 Gem dependencies are defined in <tt>config/preinitializer.rb</tt>. If
 you want, you could just as easily put them in
-<tt>config/{gems,deps,whatever}.rb</tt>, just make sure it's loaded in
+<tt>config/{gems,deps,isolate}.rb</tt>, just make sure it's loaded in
 the preinitializer:
 
     require "rubygems"
     require "isolate"
 
-    Isolate.gems "vendor/isolated" do
-      gem "rails", "= 2.2.2"
+    Isolate.gems "tmp/gems", :file => "config/isolate.rb"
 
-      # async emails!
-      gem "ar_mailer", "~> 1.3", '>= 1.3.3'
+In <tt>config/isolate.rb</tt>:
 
-      # Facebook integration
-      gem "facebooker", ">= 1.0.31"
+    gem "rails", "= 2.2.2"
 
-      # Google contacts integration
-      gem "gmail_contacts", "~> 1.7"
+    # async emails!
+    gem "ar_mailer", "~> 1.3", '>= 1.3.3'
 
-      # View templates
-      gem "haml", "~> 2.0"
+    # Facebook integration
+    gem "facebooker", ">= 1.0.31"
 
-      # Session as model
-      gem "intercession", "~> 1.0"
+    # Google contacts integration
+    gem "gmail_contacts", "~> 1.7"
 
-      # XML/HTML parsing in Facebooker and tests
-      gem "nokogiri", ">= 1.2.3"
+    # View templates
+    gem "haml", "~> 2.0"
 
-      # Twitter authentication
-      gem "oauth", "~> 0.3"
+    # Session as model
+    gem "intercession", "~> 1.0"
 
-      environment :cucumber, :development, :test do
-        gem "cucumber"     # stories!
-        gem "modelizer"    # easy model factories
-        gem "sqlite3-ruby" # database support
-        gem "vlad"         # deployment
-        gem "webrat"       # integration tests
-      end
+    # XML/HTML parsing in Facebooker and tests
+    gem "nokogiri", ">= 1.2.3"
+
+    # Twitter authentication
+    gem "oauth", "~> 0.3"
+
+    environment :cucumber, :development, :test do
+      gem "cucumber"     # stories!
+      gem "modelizer"    # easy model factories
+      gem "sqlite3-ruby" # database support
+      gem "vlad"         # deployment
+      gem "webrat"       # integration tests
     end
 
-Since this is in the preinitializer, Isolate will install and activate
-the all gems before Rails loads. The current environment is determined
-by looking at the <tt>ISOLATE_ENV</tt>, <tt>RAILS_ENV</tt>, or
-<tt>RACK_ENV</tt> environment variable. If none are set,
+You could specify all this inside an <tt>Isolate.gems</tt> block in
+<tt>config/preinitializer.rb</tt>, of course, but sometimes it's nicer
+to have an external file that's just your dependency manifest.
+
+Since this is loaded in the preinitializer, Isolate will install and
+activate the all gems before Rails loads. The current environment is
+determined by looking at the <tt>ISOLATE_ENV</tt>, <tt>RAILS_ENV</tt>,
+or <tt>RACK_ENV</tt> environment variable. If none are set,
 <tt>"development"</tt> is the default.
 
 Pow. Isolated!
