--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 1.10.2 / 2010-04-24
+
+Add 'isolate/now' convenience require in prep. for 2.x.
+
 === 1.10.1 / 2010-04-23
 
 * Fix cleanup, it wasn't.
