--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,9 @@
+=== 2.0.0.pre.1 / 2010-05-02
+
+* Don't provide a special way to set path, options is enough.
+* Deprecate and warn for Isolate.instance.
+* Allow :multiruby option to be overridden in .local files.
+
 === 2.0.0.pre.0 / 2010-04-27
 
 * Remove cache thawing until I fix RubyGems.
