--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 2.0.2 / 2010-05-25
+
+* Provide reasonable stale output for missing deps.
+
 === 2.0.1 / 2010-05-24
 
 * Fine, fine. Re-enables support for Ruby 1.8.6.
