--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 2.1.1 / 2010-07-08
+
+* Fix $LOAD_PATH filtering bug when system is false.
+
 === 2.1.0 / 2010-07-01
 
 * Pass self to event hooks. Speculative coding FTL.
