--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+=== 2.1.2 / 2010-07-23
+
+* Teach `isolate:sh` how to work on Windows.
+
 === 2.1.1 / 2010-07-08
 
 * Fix $LOAD_PATH filtering bug when system is false.
